@@ -14,7 +14,7 @@
   */
 import cmwell.ctrl.config.Jvms
 
-import scala.collection.GenSeq
+import scala.collection.parallel.ParSeq
 
 /**
   * Created by michael on 8/27/14.
@@ -125,122 +125,17 @@ case class CassandraConf(home: String,
   override def getPsIdentifier = s"/log/cas${getIndexTxt}/"
 
   override def mkScript: ConfFile = {
-    //import scala.math._
-
-    def getJarAbsPath(dir: java.io.File, prefix: String): String = {
-      if (!dir.exists) throw new IllegalFileException("Dir " + dir.getAbsolutePath + " was not found.")
-      else if (!dir.isDirectory) throw new IllegalFileException("File " + dir.getAbsolutePath + " is not a directory.")
-
-      val files = dir.list.filter(f => f.startsWith(prefix))
-
-      if (files.length > 1) throw new Exception("multiple jars were found: " + files.mkString(", "))
-      else if (files.length == 0) throw new Exception("no jars were found (prefix = " + prefix + ").")
-      else dir.getAbsolutePath + "/" + files.head
-    }
-    val pidFile = s"$home/app/cas/cur/cassandra.pid"
-    val mXmx = resourceManager.getMxmx
-    //val mXms = "-Xms" + heapSize + "M"
-    val mXms = resourceManager.getMxms
-
-    //Young gen: min(max_sensible_per_modern_cpu_core * num_cores, 1/4 * heap size)
-    val mXmn = resourceManager.getMxmn
-
-    // reduce the per-thread stack size to minimize the impact of Thrift
-    // thread-per-client.  (Best practice is for client connections to
-    // be pooled anyway.) Only do so on Linux where it is known to be
-    // supported.
-    val mXss = resourceManager.getMxss
-
-    /*lazy val jamm = {
-      val f = new java.io.File(home+"/app/cas/cur/lib")
-      val arr = f.listFiles(new FilenameFilter {
-        override def accept(dir: File, name: String): Boolean = name.startsWith("jamm")
-      })
-      require(arr.size == 1)
-      Seq(s"-javaagent:${arr.head.getAbsolutePath}")
-    }*/
-
-    val jamm = Seq(s"-javaagent:$home/app/cas/cur/lib/$$JAMMJAR")
-
-    /*val jvmArgs = JVMOptimizer.java7ExtraArgs ++ Seq("-ea") ++ jamm ++ Seq(
-      "-XX:+UseThreadPriorities",
-      "-XX:ThreadPriorityPolicy=42",
-      mXmx,
-      mXms,
-      mXmn,
-      "-XX:+HeapDumpOnOutOfMemoryError",
-      mXss,
-      "-XX:+UseG1GC",
-      "-XX:SurvivorRatio=8",
-      "-XX:MaxTenuringThreshold=1",
-      "-Djava.net.preferIPv4Stack=true",
-      "-Dcom.sun.management.jmxremote.port=" + jmxremotePort,
-      "-Dcom.sun.management.jmxremote.ssl=false",
-      "-Dcom.sun.management.jmxremote.authenticate=false",
-      "-Dlog4j.configuration=log4j-server.properties",
-      "-Dlog4j.defaultInitOverride=true",
-      s"-Dlog4j.appender.R.File=$home/log/$dir/system.log",
-      "-Dmx4jaddress=0.0.0.0",
-      "-Dmx4jport=" + dmx4jport,
-      "-Dcassandra-foreground=yes",
-      s"-Dcassandra-pidfile=$pidFile")*/
-    //"-Dcassandra.config=file://${path}/conf/cas/cassandra.yaml")
-
-    val cmsGc = Seq(
-      "-XX:+UseParNewGC",
-      "-XX:+UseConcMarkSweepGC",
-      "-XX:+CMSParallelRemarkEnabled",
-      "-XX:SurvivorRatio=8",
-      "-XX:MaxTenuringThreshold=1",
-      "-XX:CMSInitiatingOccupancyFraction=75",
-      "-XX:+UseCMSInitiatingOccupancyOnly"
-    )
-
-    val g1Gc = Seq("-XX:+UseG1GC", "-XX:SurvivorRatio=8")
-
-    val jvmArgs = JVMOptimizer.java7ExtraArgs ++ Seq("-ea") ++ jamm ++ Seq("-XX:+UseThreadPriorities",
-                                                                           "-XX:ThreadPriorityPolicy=42",
-                                                                           mXmx,
-                                                                           mXms,
-                                                                           mXmn,
-                                                                           mXss) ++
-      (if (g1) g1Gc else cmsGc) ++
-      Seq(
-        "-Djava.net.preferIPv4Stack=true",
-        "-Dcom.sun.management.jmxremote.port=" + PortManagers.cas.jmxPortManager.getPort(index),
-        "-Dcom.sun.management.jmxremote.ssl=false",
-        "-Dcom.sun.management.jmxremote.authenticate=false",
-        "-Dlog4j.configuration=log4j-server.properties",
-        "-Dlog4j.defaultInitOverride=true",
-        "-Dmx4jaddress=0.0.0.0",
-        "-Dmx4jport=" + PortManagers.cas.dmx4jPortManager.getPort(index),
-        "-Dcassandra-foreground=yes",
-        /*"-Dconsistent.rangemovement=false",*/
-        s"-Dcassandra-pidfile=$pidFile",
-        s"-Dcassandra.logdir=$home/log/$dir/"
-      )
-    def classpath =
-      s"$home/conf/" + dir + ":" +
-        home + "/build/classes/main:" +
-        home + "/build/classes/thrift:" +
-        s"$home/app/cas/cur/lib/*"
-
-    // Seq(s"-javaagent:$home/app/ctrl/cur", s"-Dctrl.listenAddress=$listenAddress", s"-Dctrl.seedNodes=${host}",
-    // s"-Dctrl.clusterName=$clusterName", s"-Dctrl.roles=Metrics,CassandraNode")
-    val agentLibArgs = Seq.empty
-
-    val args = Seq("starter", "java") ++ agentLibArgs ++ jvmArgs ++ JVMOptimizer.gcLoggingJVM(
-      s"$home/log/" + dir + "/gc.log"
-    ) ++ Seq("-cp", classpath, "org.apache.cassandra.service.CassandraDaemon")
 
     val scriptString =
       s"""export PATH=$home/app/java/bin:$home/bin/utils:$PATH
        |export CASSANDRA_HOME=$home/app/cas/cur
        |export CASSANDRA_CONF=$home/conf/${dir}
-       |export JAMMJAR=`ls -1 $home/app/cas/cur/lib/ | grep jamm`
+       |export CASSANDRA_INCLUDE=$home/conf/${dir}/cassandra.in.sh
+       |export CASSANDRA_HEAPDUMP_DIR=$home/log/${dir}
+       |export CASSANDRA_LOG_DIR=$home/log/${dir}
        |$CHKSTRT
        |$BMSG
-       |${args.mkString(" ")} > $home/log/$dir/stdout.log 2> $home/log/$dir/stderr.log &""".stripMargin
+       |starter bin/cassandra -f > $home/log/$dir/stdout.log 2> $home/log/$dir/stderr.log &""".stripMargin
 
     ConfFile(sName, scriptString, true)
   }
@@ -273,6 +168,18 @@ case class CassandraConf(home: String,
 
     val logBackContent = ResourceBuilder.getResource(s"scripts/templates/logback-cassandra.xml", Map.empty)
 
+    val jvmOptionsMap = Map[String, String](
+      "ps_id" -> getPsIdentifier,
+      "cas_ms" -> s"${resourceManager.mxms}",
+      "cas_mx" -> s"${resourceManager.mxmx}",
+      "cas_mn" -> s"${resourceManager.mxmn}"
+    )
+    val jvmOptContent = ResourceBuilder.getResource(s"scripts/templates/cas-jvm.options", jvmOptionsMap)
+
+    val cassandraEnvContent = ResourceBuilder.getResource(s"scripts/templates/cassandra-env.sh", Map.empty)
+
+    val casIncludeContent = ResourceBuilder.getResource(s"scripts/templates/cassandra.in.sh", Map.empty)
+
     val rackConfContent =
       ResourceBuilder.getResource("scripts/templates/cassandra-rackdc.properties", Map("rack_id" -> rs.getRackId(this)))
 
@@ -288,6 +195,9 @@ case class CassandraConf(home: String,
     List(
       ConfFile("cassandra.yaml", confContent, false),
       ConfFile("logback.xml", logBackContent),
+      ConfFile("cassandra-env.sh", cassandraEnvContent),
+      ConfFile("cassandra.in.sh", casIncludeContent),
+      ConfFile("jvm.options", jvmOptContent),
       ConfFile("cassandra-rackdc.properties", rackConfContent, false),
       ConfFile("cassandra-status-viewer", cassandraStatus, true),
       ConfFile("cassandra-cql-init-cluster-new", cqlInit2),
@@ -313,10 +223,11 @@ case class ElasticsearchConf(clusterName: String,
                              sName: String,
                              index: Int,
                              rs: RackSelector,
-                             autoCreateIndex: Boolean,
                              g1: Boolean,
-                             hostIp: String)
+                             hostIp: String,
+                             dirsPerEs: Int = 1)
     extends ComponentConf(hostIp, s"$home/app/es/cur", sName, s"$home/conf/$dir", "elasticsearch.yml", index) {
+
   val classpath = s"""'$home/app/es/cur/lib/*:'"""
 
   override def getPsIdentifier = {
@@ -360,7 +271,10 @@ case class ElasticsearchConf(clusterName: String,
       "http_port" -> httpPort.toString,
       "transport_port" -> transportPort.toString,
       "num_of_shards" -> expectedNodes.toString,
-      "num_of_replicas" -> { if (expectedNodes > 2) 2 else 0 }.toString
+      "num_of_replicas" -> { if (expectedNodes > 2) 2 else 0 }.toString,
+      "path_data" -> { if (dirsPerEs == 1) s"$home/data/$dir"
+                       else {
+                         (2 to dirsPerEs).map(_.toString).fold(s"$home/data/es")((acc, x) => s"$home/data/es$x,$acc")}}
     )
 
     val confContent = ResourceBuilder.getResource(s"scripts/templates/$template", m)
@@ -443,7 +357,6 @@ case class ZookeeperConf(home: String, clusterName: String, servers: Seq[String]
                      |export JMXDISABLE=true
                      |export JVMFLAGS="-Xmx500m -Xms500m -Dlog4j.configuration=file:$confDir/log4j.properties"""".stripMargin
     // scalastyle:off
-    val cp = s"cur/lib/slf4j-log4j12-1.7.25.jar:cur/lib/slf4j-api-1.7.25.jar:cur/lib/netty-3.10.6.Final.jar:cur/lib/log4j-1.2.17.jar:cur/lib/jline-0.9.94.jar:cur/zookeeper-${cmwell.util.build.BuildInfo.zookeeperVersion}.jar:$home/conf/$dir"
     val scriptString =
       s"""
           |$exports
@@ -492,7 +405,8 @@ case class BgConf(home: String,
                   seeds: String,
                   seedPort: Int = 9301,
                   dir: String = "bg",
-                  defaultRdfProtocol: String)
+                  defaultRdfProtocol: String,
+                  transportAddress: String)
     extends ComponentConf(hostIp, s"$home/app/bg", sName, s"$home/conf/bg", "bg.yml", 1) {
   override def mkScript: ConfFile = {
     def jvmArgs = {
@@ -560,7 +474,7 @@ case class BgConf(home: String,
       "irwServiceDao.clusterName" -> s"$clusterName",
       "irwServiceDao.hostName" -> s"$hostName",
       "ftsService.clusterName" -> s"$clusterName",
-      "ftsService.transportAddress" -> s"$hostName",
+      "ftsService.transportAddress" -> s"$transportAddress",
       "cmwell.rdfDefaultProtocol" -> defaultRdfProtocol,
       "kafka.bootstrap.servers" -> s"localhost:9092,${zookeeperServers.map(kafkaNode => s"$kafkaNode:9092").mkString(",")}"
     )
@@ -592,7 +506,8 @@ case class CwConf(home: String,
                   hostIp: String,
                   seeds: String,
                   seedPort: Int,
-                  subjectsInSpAreHttps: Boolean)
+                  subjectsInSpAreHttps: Boolean,
+                  transportAddress: String)
     extends ComponentConf(hostIp, s"$home/app/ws", sName, s"$home/conf/cw", "ws.yml", 1) {
   override def mkScript: ConfFile = {
     {
@@ -641,7 +556,7 @@ case class CwConf(home: String,
       "ftsService.clusterName" -> s"$clusterName",
       "cmwell.home" -> s"$home",
       "irwServiceDao.hostName" -> s"$hostName",
-      "ftsService.transportAddress" -> s"$hostName",
+      "ftsService.transportAddress" -> s"$transportAddress",
       "ftsService.defaultPartitionNew" -> s"cm_well",
       "quads.cache.size" -> s"1000",
       "quads.globalOperations.results.maxLength" -> s"10000",
@@ -682,7 +597,8 @@ case class WebConf(home: String,
                    hostIp: String,
                    seeds: String,
                    seedPort: Int,
-                   defaultRdfProtocol: String)
+                   defaultRdfProtocol: String,
+                   transportAddress: String)
     extends ComponentConf(hostIp, s"$home/app/ws", sName, s"$home/conf/ws", "ws.yml", 1) {
   def genMemStr(mem: String): String = {
     if (!mem.isEmpty) s"-J$mem" else mem
@@ -747,7 +663,7 @@ case class WebConf(home: String,
       "ftsService.clusterName" -> s"$clusterName",
       "cmwell.home" -> s"$home",
       "irwServiceDao.hostName" -> s"$hostName",
-      "ftsService.transportAddress" -> s"$hostName",
+      "ftsService.transportAddress" -> s"$transportAddress",
       "cmwell.rdfDefaultProtocol" -> defaultRdfProtocol
     )
 
@@ -941,203 +857,4 @@ case class DcConf(home: String,
   }
 
   override def getPsIdentifier: String = "log/dc"
-}
-
-//TODO: remove LogstashConf
-// scalastyle:off
-object LogstashConf {
-  def genLogstashConfFile(clusterName: String,
-                          esHost: String,
-                          globalFields: Map[String, String],
-                          logslocation: String,
-                          subDivision: Int): String = {
-    val logsDir = logslocation //s"${instDirs.globalLocation}/cm-well/log"
-
-    def getFileInput(pathToLog: String, fields: Map[String, String] = Map.empty) =
-      s"""
-         |file {
-         | path => "$pathToLog"
-         | add_field => {${(globalFields ++ fields).map(m => s""" "${m._1}" => "${m._2}" """).mkString("\n")}}
-         |}
-      """.stripMargin
-
-    def getRemoteElasticsearchOutput =
-      s"""
-         | elasticsearch {
-         |   hosts => ["$esHost"]
-         |   flush_size => 5000
-         |   idle_flush_time => 30
-         | }
-      """.stripMargin
-
-    def getComponentFieldsMap(component: String, logName: String, componentIndex: Int) =
-      Map("component" -> component, "logName" -> logName, "componentIndex" -> componentIndex.toString)
-
-    def createComponentEntries(component: String, dir: String, amount: Int, logs: List[String]): GenSeq[String] = {
-      (for (i <- 1 to amount)
-        yield {
-          val logDirName = ResourceBuilder.getIndexedName(dir, i)
-          val logDirFullPath = s"$logsDir/$logDirName"
-          logs.map(log => getFileInput(s"$logDirFullPath/$log", getComponentFieldsMap(component, log.split('.')(0), i)))
-        }).flatten
-    }
-
-    val casLogs = createComponentEntries("Cassandra",
-                                         "cas",
-                                         subDivision,
-                                         List("gc.log.*", "stdout.log", "stderr.log", "system.log"))
-    val esLogs = createComponentEntries(
-      "Elasticsearch",
-      "es",
-      subDivision,
-      List(s"${clusterName}_index_indexing_slowlog.log",
-           s"${clusterName}_index_search_slowlog.log",
-           s"${clusterName}.log",
-           "gc.log.*",
-           "stderr.log",
-           "stdout.log")
-    )
-    val esMasterLogs = createComponentEntries(
-      "ElasticsearchMaster",
-      "es-master",
-      1,
-      List(s"${clusterName}_index_indexing_slowlog.log",
-           s"${clusterName}_index_search_slowlog.log",
-           s"${clusterName}.log",
-           "gc.log.*",
-           "stderr.log",
-           "stdout.log")
-    )
-    val wsLogs = createComponentEntries("Ws",
-                                        "ws",
-                                        1,
-                                        List("access.log", "application.log", "gc.log.*", "stderr.log", "stdout.log"))
-    val bgLogs = createComponentEntries(
-      "Bg",
-      "bg",
-      1,
-      List("application.log", "gc.log.*", "heartbeat.log", "stderr.log", "stdout.log")
-    )
-    val ctrlLogs = createComponentEntries(
-      "Ctrl",
-      "ctrl",
-      1,
-      List("application.log", "stderr.log", "stdout.log", "cluster_state.log", "alerts.log", "gc.log.*")
-    )
-    val dcLogs = createComponentEntries("DC", "dc", 1, List("application.log", "stderr.log", "stdout.log", "gc.log.*"))
-
-    s"""
-       |input {
-       |  ${casLogs.mkString("\n")}
-       |  ${esLogs.mkString("\n")}
-       |  ${esMasterLogs.mkString("\n")}
-       |  ${bgLogs.mkString("\n")}
-       |  ${wsLogs.mkString("\n")}
-       |  ${ctrlLogs.mkString("\n")}
-       |  ${dcLogs.mkString("\n")}
-       |}
-       |
-       |filter {
-       | if [component] == "Ctrl" {
-       |   # 18:32:58.198 TKD [cm-well-p-akka.actor.default-dispatcher-3] INFO  cmwell.ctrl.hc.HealthActor - GotHeakupLatencyStats 127.0.0.1 27010 ElasticsearchNode 0 0 0 0 1 23 979
-       |   grok {
-       |     match => [ "message", "%{IPORHOST:ip} %{NUMBER:pid} %{WORD:component} %{NUMBER:p25} %{NUMBER:p50} %{NUMBER:p75} %{NUMBER:p90} %{NUMBER:p99} %{NUMBER:p995} %{NUMBER:max}" ]
-       |   }
-       | }
-       |
-       | if [component] == "Ctrl" {
-       |   grok {
-       |     match => [ "message", "DiskUsage: %{NOTSPACE:device_name} %{NUMBER:device_usage:int}" ]
-       |   }
-       | }
-       |
-       | if [logName] == "access" {
-       |   grok {
-       |    match => ["message", "%{NOTSPACE:date} %{NOTSPACE:time} +%{NOTSPACE:zeros} method=%{WORD:method} uri=%{NOTSPACE:uri} remote-address=%{IPORHOST:ip} status=%{NUMBER:status:int} process-time=%{NUMBER:processTime:int}ms x-forwarded-for=%{NOTSPACE:forward}"]
-       |   }
-       | }
-       | if [logName] == "gc" {
-       |   grok {
-       |     match => ["message", "%{WORD:date}: %{NUMBER:num}: Total time for which application threads were stopped: %{NUMBER:duration:float} %{WORD:seconds}"]
-       |   }
-       | }
-       |}
-       |
-       |output {
-       |  $getRemoteElasticsearchOutput
-       |}
-    """.stripMargin
-  }
-}
-// scalastyle:on
-case class LogstashConf(clusterName: String,
-                        elasticsearchUrl: String,
-                        home: String,
-                        dir: String = "logstash",
-                        sName: String,
-                        subdivision: Int,
-                        hostIp: String)
-    extends ComponentConf(hostIp, s"$home/app/logstash", sName, s"$home/conf/logstash", "logstash.yml", 1) {
-  override def mkScript: ConfFile = {
-    val scriptContent = {
-      val sb = new StringBuilder
-      sb ++= "export PATH="
-      sb ++= home
-      sb ++= "/app/java/bin:"
-      sb ++= home
-      sb ++= "/bin/utils:"
-      sb ++= PATH
-      sb += '\n'
-      sb ++= CHKSTRT
-      sb += '\n'
-      sb ++= BMSG
-      sb += '\n'
-      sb ++= "starter "
-      sb ++= home
-      sb ++= "/app/logstash/cur/bin/logstash agent -f "
-      sb ++= home
-      sb ++= "/conf/logstash/ > "
-      sb ++= home
-      sb ++= "/log/logstash/stdout.log 2> "
-      sb ++= home
-      sb ++= "/log/logstash/stderr.log &"
-      sb.result()
-    }
-    ConfFile("start.sh", scriptContent, true)
-  }
-
-  override def getPsIdentifier: String = "logstash/logstash"
-
-  override def mkConfig: List[ConfFile] = {
-    val confContent = LogstashConf.genLogstashConfFile(clusterName,
-                                                       elasticsearchUrl,
-                                                       Map.empty[String, String],
-                                                       s"$home/log",
-                                                       subdivision)
-    List(ConfFile("logstash.conf", confContent, false))
-  }
-}
-
-case class KibanaConf(hostIp: String, home: String, listenPort: String, listenAddress: String, elasticsearchUrl: String)
-    extends ComponentConf(hostIp, s"$home/app/kibana", "start.sh", s"$home/conf/kibana", "kibana.yml", 1) {
-  override def mkScript: ConfFile = {
-    val scriptContent =
-      s"""
-         |export PATH=$home/bin/utils:$PATH
-         |$CHKSTRT
-         |$BMSG
-         |starter $home/app/kibana/cur/bin/kibana -c $home/conf/kibana/kibana.yml > $home/log/kibana/stdout.log 2> $home/log/kibana/stderr.log &""".stripMargin
-    ConfFile("start.sh", scriptContent, true)
-  }
-
-  override def getPsIdentifier: String = "bin/kibana"
-
-  override def mkConfig: List[ConfFile] = {
-    val m = Map[String, String]("port" -> listenPort,
-                                "host" -> listenAddress,
-                                "elasticsearch_url" -> s"http://$elasticsearchUrl")
-    val confContent = ResourceBuilder.getResource(s"scripts/templates/kibana.yml", m)
-
-    List(ConfFile("kibana.yml", confContent, false))
-  }
 }
